Trab1/src/a22/a22Parser.java
// Generated from C:/Users/rafad/OneDrive/Documentos/3ano_2semestre/Compiladores/a22/src\a22.g4 by ANTLR 4.9.2
package a22;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class a22Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KEYWORDS=1, TYPE_STRUCT=2, IF=3, THEN=4, ELSE=5, WHILE=6, FOR=7, FOR_TO=8, 
		FOR_DOWNTO=9, FOR_STEP=10, RETURN=11, REFERENCED=12, TYPES=13, STRUCT_DOT=14, 
		LBRACKET=15, RBRACKET=16, LARRAY=17, RARRAY=18, LPARENTH=19, RPARENTH=20, 
		PLUS=21, MINUS=22, DIVIDER=23, MULTIPLIER=24, MODULO=25, GREATER=26, LESS=27, 
		EQUAL=28, IS_EQUAL_TO=29, DIFFERENT=30, GREATER_THAN=31, LESS_THAN=32, 
		AND=33, OR=34, NOT=35, COMMA=36, SEMICOLON=37, BOOL=38, REAL=39, INT=40, 
		STRING=41, ID=42, SPACE=43, SL_COMMENT=44, ML_COMMENT=45;
	public static final int
		RULE_start = 0, RULE_expression = 1, RULE_declaring_data = 2, RULE_instruction = 3, 
		RULE_int_expression = 4, RULE_real_expression = 5, RULE_bool_expression = 6, 
		RULE_bool_comparators = 7, RULE_string_expression = 8, RULE_stored_values = 9, 
		RULE_stored_values1 = 10, RULE_declare_variables = 11, RULE_declare_types = 12, 
		RULE_attribution_instruction = 13, RULE_attribution_no_semicolon = 14, 
		RULE_if_instruction = 15, RULE_while_instruction = 16, RULE_for_instruction = 17, 
		RULE_return_instruction = 18, RULE_expression_instruction = 19, RULE_block_instruction = 20, 
		RULE_semicolon_instruction = 21, RULE_defining_functions = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expression", "declaring_data", "instruction", "int_expression", 
			"real_expression", "bool_expression", "bool_comparators", "string_expression", 
			"stored_values", "stored_values1", "declare_variables", "declare_types", 
			"attribution_instruction", "attribution_no_semicolon", "if_instruction", 
			"while_instruction", "for_instruction", "return_instruction", "expression_instruction", 
			"block_instruction", "semicolon_instruction", "defining_functions"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'type'", "'if'", "'then'", "'else'", "'while'", "'for'", 
			"'to'", "'downto'", "'step'", "'return'", "'^'", null, "'.'", "'{'", 
			"'}'", "'['", "']'", "'('", "')'", "'+'", "'-'", "'/'", "'*'", "'%'", 
			"'>'", "'<'", "'='", null, null, null, null, "'and'", "'or'", "'not'", 
			"','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KEYWORDS", "TYPE_STRUCT", "IF", "THEN", "ELSE", "WHILE", "FOR", 
			"FOR_TO", "FOR_DOWNTO", "FOR_STEP", "RETURN", "REFERENCED", "TYPES", 
			"STRUCT_DOT", "LBRACKET", "RBRACKET", "LARRAY", "RARRAY", "LPARENTH", 
			"RPARENTH", "PLUS", "MINUS", "DIVIDER", "MULTIPLIER", "MODULO", "GREATER", 
			"LESS", "EQUAL", "IS_EQUAL_TO", "DIFFERENT", "GREATER_THAN", "LESS_THAN", 
			"AND", "OR", "NOT", "COMMA", "SEMICOLON", "BOOL", "REAL", "INT", "STRING", 
			"ID", "SPACE", "SL_COMMENT", "ML_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "a22.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public a22Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(a22Parser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<Declaring_dataContext> declaring_data() {
			return getRuleContexts(Declaring_dataContext.class);
		}
		public Declaring_dataContext declaring_data(int i) {
			return getRuleContext(Declaring_dataContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof a22Visitor ) return ((a22Visitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORDS) | (1L << TYPE_STRUCT) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << TYPES) | (1L << LBRACKET) | (1L << LPARENTH) | (1L << MINUS) | (1L << NOT) | (1L << SEMICOLON) | (1L << BOOL) | (1L << REAL) | (1L << INT) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(46);
					expression();
					}
					break;
				case 2:
					{
					setState(47);
					declaring_data();
					}
					break;
				case 3:
					{
					setState(48);
					instruction();
					}
					break;
				}
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Int_expressionContext int_expression() {
			return getRuleContext(Int_expressionContext.class,0);
		}
		public Real_expressionContext real_expression() {
			return getRuleContext(Real_expressionContext.class,0);
		}
		public String_expressionContext string_expression() {
			return getRuleContext(String_expressionContext.class,0);
		}
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof a22Visitor ) return ((a22Visitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				int_expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				real_expression(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				string_expression(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				bool_expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaring_dataContext extends ParserRuleContext {
		public Declare_variablesContext declare_variables() {
			return getRuleContext(Declare_variablesContext.class,0);
		}
		public Declare_typesContext declare_types() {
			return getRuleContext(Declare_typesContext.class,0);
		}
		public Declaring_dataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaring_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).enterDeclaring_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).exitDeclaring_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof a22Visitor ) return ((a22Visitor<? extends T>)visitor).visitDeclaring_data(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaring_dataContext declaring_data() throws RecognitionException {
		Declaring_dataContext _localctx = new Declaring_dataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaring_data);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPES:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				declare_variables();
				}
				break;
			case TYPE_STRUCT:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				declare_types();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Declare_variablesContext declare_variables() {
			return getRuleContext(Declare_variablesContext.class,0);
		}
		public Attribution_instructionContext attribution_instruction() {
			return getRuleContext(Attribution_instructionContext.class,0);
		}
		public If_instructionContext if_instruction() {
			return getRuleContext(If_instructionContext.class,0);
		}
		public While_instructionContext while_instruction() {
			return getRuleContext(While_instructionContext.class,0);
		}
		public For_instructionContext for_instruction() {
			return getRuleContext(For_instructionContext.class,0);
		}
		public Return_instructionContext return_instruction() {
			return getRuleContext(Return_instructionContext.class,0);
		}
		public Expression_instructionContext expression_instruction() {
			return getRuleContext(Expression_instructionContext.class,0);
		}
		public Block_instructionContext block_instruction() {
			return getRuleContext(Block_instructionContext.class,0);
		}
		public Semicolon_instructionContext semicolon_instruction() {
			return getRuleContext(Semicolon_instructionContext.class,0);
		}
		public Defining_functionsContext defining_functions() {
			return getRuleContext(Defining_functionsContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof a22Visitor ) return ((a22Visitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				declare_variables();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				attribution_instruction(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				if_instruction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				while_instruction();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				for_instruction();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				return_instruction();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				expression_instruction();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(75);
				block_instruction();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(76);
				semicolon_instruction();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(77);
				defining_functions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_expressionContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(a22Parser.INT, 0); }
		public Stored_valuesContext stored_values() {
			return getRuleContext(Stored_valuesContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(a22Parser.MINUS, 0); }
		public TerminalNode LPARENTH() { return getToken(a22Parser.LPARENTH, 0); }
		public List<Int_expressionContext> int_expression() {
			return getRuleContexts(Int_expressionContext.class);
		}
		public Int_expressionContext int_expression(int i) {
			return getRuleContext(Int_expressionContext.class,i);
		}
		public TerminalNode RPARENTH() { return getToken(a22Parser.RPARENTH, 0); }
		public TerminalNode DIVIDER() { return getToken(a22Parser.DIVIDER, 0); }
		public TerminalNode MULTIPLIER() { return getToken(a22Parser.MULTIPLIER, 0); }
		public TerminalNode MODULO() { return getToken(a22Parser.MODULO, 0); }
		public TerminalNode PLUS() { return getToken(a22Parser.PLUS, 0); }
		public Int_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).enterInt_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).exitInt_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof a22Visitor ) return ((a22Visitor<? extends T>)visitor).visitInt_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Int_expressionContext int_expression() throws RecognitionException {
		return int_expression(0);
	}

	private Int_expressionContext int_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Int_expressionContext _localctx = new Int_expressionContext(_ctx, _parentState);
		Int_expressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_int_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(81);
					match(MINUS);
					}
				}

				setState(86);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INT:
					{
					setState(84);
					match(INT);
					}
					break;
				case KEYWORDS:
				case ID:
					{
					setState(85);
					stored_values();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				{
				setState(88);
				match(LPARENTH);
				setState(89);
				int_expression(0);
				setState(90);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIVIDER) | (1L << MULTIPLIER) | (1L << MODULO))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(91);
				int_expression(0);
				setState(92);
				match(RPARENTH);
				}
				break;
			case 3:
				{
				setState(94);
				match(LPARENTH);
				setState(95);
				int_expression(0);
				setState(96);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(97);
				int_expression(0);
				setState(98);
				match(RPARENTH);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(108);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new Int_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_int_expression);
						setState(102);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(103);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIVIDER) | (1L << MULTIPLIER) | (1L << MODULO))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(104);
						int_expression(3);
						}
						break;
					case 2:
						{
						_localctx = new Int_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_int_expression);
						setState(105);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(106);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(107);
						int_expression(2);
						}
						break;
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Real_expressionContext extends ParserRuleContext {
		public TerminalNode REAL() { return getToken(a22Parser.REAL, 0); }
		public TerminalNode INT() { return getToken(a22Parser.INT, 0); }
		public Stored_valuesContext stored_values() {
			return getRuleContext(Stored_valuesContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(a22Parser.MINUS, 0); }
		public TerminalNode LPARENTH() { return getToken(a22Parser.LPARENTH, 0); }
		public List<Real_expressionContext> real_expression() {
			return getRuleContexts(Real_expressionContext.class);
		}
		public Real_expressionContext real_expression(int i) {
			return getRuleContext(Real_expressionContext.class,i);
		}
		public TerminalNode RPARENTH() { return getToken(a22Parser.RPARENTH, 0); }
		public TerminalNode DIVIDER() { return getToken(a22Parser.DIVIDER, 0); }
		public TerminalNode MULTIPLIER() { return getToken(a22Parser.MULTIPLIER, 0); }
		public TerminalNode PLUS() { return getToken(a22Parser.PLUS, 0); }
		public Real_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).enterReal_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof a22Listener ) ((a22Listener)listener).exitReal_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof a22Visitor ) return ((a22Visitor<? extends T>)visitor).visitReal_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Real_expressionContext real_expression() throws RecognitionException {
		return real_expression(0);
	}

	private Real_expressionContext real_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Real_expressionContext _localctx = new Real_expressionContext(_ctx, _parentState);
		Real_expressionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_real_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(114);
					match(MINUS);
					}
				}

				setState(120);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case REAL:
					{
					setState(117);
					match(REAL);
					}
					break;
				case INT:
					{
					setState(118);
					match(INT);
					}
					break;
				case KEYWORDS:
				case ID:
					{
					setState(119);
					stored_values();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				{
				setState(122);
				match(LPARENTH);
				setState(123);
				real_expression(0);
				setState(124);
				_la = _input.LA(1);
				if ( !(_la==DIVIDER || _la==MULTIPLIER) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(125);
				real_expression(0);
				setState(126);
				match(RPARENTH);
				}
				break;
			case 3:
				{
				setState(128);
				match(LPARENTH);
				setState(129);
				real_expression(0);
				setState(130);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(131);
				real_expression(0);
				setState(132);
				match(RPARENTH);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(142);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new Real_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_real_expression);
						setState(136);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(137);
						_la = _input.LA(1);
						if ( !(_la==DIVIDER || _la==MULTIPLIER) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(138);
						real_expression(3);
						}
						break;
					case 2:
						{
						_localctx = new Real_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_real_expression);
						setState(139);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(140);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(141);
						real_expression(2);
						}
						break;
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
